rust/parser-r/src/snapshots/parse_r_fragments@assigns.R.snap
---
source: rust/parser-r/src/lib.rs
assertion_line: 210
expression: resource_info
input_file: fixtures/fragments/r/assigns.R
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/r/assigns.R",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "R"
  },
  "relations": [
    [
      {
        "type": "Assigns",
        "range": [
          0,
          0,
          0,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var1",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          1,
          0,
          1,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var2",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          3,
          0,
          3,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "fun1",
        "kind": "Function"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          5,
          4,
          5,
          8
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var3",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          10,
          4,
          10,
          8
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var4",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          13,
          0,
          13,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var5",
        "kind": ""
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          15,
          0,
          15,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var6",
        "kind": "Boolean"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          16,
          0,
          16,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var7",
        "kind": "Boolean"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          17,
          0,
          17,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var8",
        "kind": "Integer"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          18,
          0,
          18,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var9",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          19,
          0,
          19,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var10",
        "kind": "String"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          20,
          0,
          20,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/assigns.R",
        "name": "var11",
        "kind": "Datatable"
      }
    ]
  ],
  "compile_digest": "11349132781383042672.12063492160969735184.0.0.0",
  "tags": []
}
