rust/parser-r/src/snapshots/parse_r_fragments@reads.R.snap
---
source: rust/parser-r/src/lib.rs
assertion_line: 210
expression: resource_info
input_file: fixtures/fragments/r/reads.R
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/r/reads.R",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "r"
  },
  "relations": [
    [
      {
        "type": "Reads",
        "range": [
          1,
          9,
          1,
          16
        ]
      },
      {
        "type": "File",
        "path": "fragments/r/path1"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          4,
          0,
          4,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/reads.R",
        "name": "data",
        "kind": "Datatable"
      }
    ],
    [
      {
        "type": "Reads",
        "range": [
          4,
          19,
          4,
          26
        ]
      },
      {
        "type": "File",
        "path": "fragments/r/path2"
      }
    ],
    [
      {
        "type": "Assigns",
        "range": [
          7,
          0,
          7,
          3
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/reads.R",
        "name": "foo",
        "kind": "Function"
      }
    ],
    [
      {
        "type": "Reads",
        "range": [
          8,
          22,
          8,
          29
        ]
      },
      {
        "type": "File",
        "path": "fragments/r/path3"
      }
    ]
  ],
  "compile_digest": "4070031409373294044.14306524640697689833.0.0.0",
  "tags": []
}
