rust/parser-r/src/snapshots/parse_r_fragments@tags.R.snap
---
source: rust/parser-r/src/lib.rs
expression: resource_info
input_file: fixtures/fragments/r/tags.R

---
{
  "resource": {
    "type": "Code",
    "path": "fragments/r/tags.R",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "R"
  },
  "relations": [
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          29
        ]
      },
      {
        "type": "Module",
        "language": "R",
        "name": "pkg1"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          29
        ]
      },
      {
        "type": "Module",
        "language": "R",
        "name": "pkg2"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          29
        ]
      },
      {
        "type": "Module",
        "language": "R",
        "name": "pk3"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          29
        ]
      },
      {
        "type": "Module",
        "language": "R",
        "name": "pkg4"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          1,
          0,
          1,
          19
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/tags.R",
        "name": "var1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          0,
          2,
          12
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/tags.R",
        "name": "var1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Read",
        "range": [
          3,
          0,
          3,
          21
        ]
      },
      {
        "type": "File",
        "path": "file1"
      }
    ],
    [
      {
        "type": "Read",
        "range": [
          3,
          0,
          3,
          21
        ]
      },
      {
        "type": "File",
        "path": "file2"
      }
    ],
    [
      {
        "type": "Write",
        "range": [
          4,
          0,
          4,
          20
        ]
      },
      {
        "type": "File",
        "path": "file3"
      }
    ]
  ],
  "pure": false,
  "compile_digest": "fac603e436b0b2675b9e3252ea46e7d36d72604a4e4185bc57148caebfdb93f2"
}
