rust/parser-r/src/snapshots/parse_r_fragments@uses.R.snap
---
source: rust/parser-r/src/lib.rs
assertion_line: 210
expression: resource_info
input_file: fixtures/fragments/r/uses.R
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/r/uses.R",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "R"
  },
  "relations": [
    [
      {
        "type": "Use",
        "range": [
          0,
          0,
          0,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          0,
          1,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "fun1",
        "kind": "Function"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          0,
          2,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var2",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          7,
          2,
          11
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var3",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          0,
          3,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "fun2",
        "kind": "Function"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          5,
          3,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var4",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          11,
          3,
          15
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var5",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          4,
          0,
          4,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var6",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          4,
          5,
          4,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var7",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          6,
          4,
          6,
          8
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var8",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          6,
          11,
          6,
          15
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var9",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          7,
          14,
          7,
          19
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var10",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          12,
          15,
          12,
          20
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var11",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          13,
          4,
          13,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var12",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          18,
          7,
          18,
          12
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var13",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          22,
          0,
          22,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          23,
          0,
          23,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          24,
          0,
          24,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var14",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          24,
          13,
          24,
          18
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "var15",
        "kind": ""
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          34,
          0,
          34,
          6
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "assign",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          35,
          0,
          35,
          6
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "assign",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          36,
          0,
          36,
          6
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "assign",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          37,
          0,
          37,
          6
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/r/uses.R",
        "name": "assign",
        "kind": "Function"
      }
    ]
  ],
  "compile_digest": "4702990536694179253.11654817024932292149.0.0.0"
}
